galaxy map width correction to reflect scrollbar presence

--- a/src/app/components/planet-list/planet-list.component.scss
+++ b/src/app/components/planet-list/planet-list.component.scss
@@ -19,7 +19,7 @@ detailed-map { display: none; }
                 display: block;
                 left: 350px;
                 margin-left: 3vw;
-                width: calc(100vw - 350px - 2 * 3vw - 3vw);
+                width: calc(100% - 350px - 3vw);
             }
         }
         detailed-map {
